# examples

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
argcargv/: CMakeLists.txt  README.md  argcargv.c
bitmagic/: CMakeLists.txt  bit_field_magic.c
crazymacros/: CMakeLists.txt  crazymacros.c
cstack/: CMakeLists.txt  cstack.c  stack.h  stack_array_impl.c  stack_da_impl.c  stack_ll_impl.c
eigen/: CMakeLists.txt  eigen.cpp
fftw3simple/: CMakeLists.txt  fftw3simple.cpp
floatbits/: CMakeLists.txt  floatbits.c
jsondefault/: CMakeLists.txt  jsondefault.cpp
